--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#My ignores
+c-frontend/bin/Debug/config.txt
+c-frontend/bin/Release/config.txt
+
 # User-specific files
 *.rsuser
 *.suo
