--- a/c-frontend/c-frontend.csproj
+++ b/c-frontend/c-frontend.csproj
@@ -79,7 +79,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Config.cs" />
+    <Compile Include="Client.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
