--- a/c-frontend/c-frontend.csproj
+++ b/c-frontend/c-frontend.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Menu\MenuFramework.cs" />
     <Compile Include="Menu\Prompts.cs" />
     <Compile Include="Models\ActiveUser.cs" />
     <Compile Include="Program.cs" />
